<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/icon_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_tourist"
            android:icon="@drawable/icon_tourist"
            android:title="@string/menu_tourist" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/icon_food"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/icon_hostel"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/nav_regions"
            android:icon="@drawable/icon_regions"
            android:title="@string/menu_regions" />
    </group>
</menu>