<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="tw.edu.pu.s11004304.fd_project2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="tw.edu.pu.s11004304.fd_project2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="tw.edu.pu.s11004304.fd_project2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />
    <fragment
        android:id="@+id/nav_tourist"
        android:name="tw.edu.pu.s11004304.fd_project2.ui.tourist.TouristFragment"
        android:label="@string/menu_tourist"
        tools:layout="@layout/fragment_tourist" />
    <fragment
        android:id="@+id/nav_regions"
        android:name="tw.edu.pu.s11004304.fd_project2.ui.regions.RegionsFragment"
        android:label="@string/menu_regions"
        tools:layout="@layout/fragment_regions" />
</navigation>